Update Kawa to Java version 22